changed the name of the fields on base and indox for Flames 25

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -413,7 +413,7 @@
                                 <span>
                                     <i class="ti ti-flame"></i>
                                 </span>
-                                <span class="hide-menu">Summer Training😎</span>
+                                <span class="hide-menu">FLAMES '25</span>
                             </a>
                         </li>
 
