added nistha in the teams page

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -420,14 +420,14 @@ Our Team | Angaar
             <div class="team-card" data-category="design" data-aos="fade-up" data-aos-delay="200">
                 <div class="team-img-wrapper">
                     <img class="team-img"
-                        src="https://media.licdn.com/dms/image/v2/D5603AQHNkZy8pXwVJA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1718273999260?e=1747267200&v=beta&t=kTRp7uu_umxDgyzg5zqkaY6vglPEVEPrzQTlssnTG-I"
-                        alt="Ishaan Khan">
+                        src="{% static 'img/home/nistha.jpeg' %}"
+                        alt="Nistha Bhura">
                 </div>
                 <div class="team-card-content">
-                    <h3 class="team-name">Ishaan Khan</h3>
-                    <p class="team-position">Design Team</p>
+                    <h3 class="team-name">Nistha Bhura</h3>
+                    <p class="team-position">Outreach Manager</p>
                     <div class="team-social">
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/nistha-bhura-67aa54257" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                         <!-- <a href="#" class="social-icon"><i class="fab fa-behance"></i></a>
                         <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a> -->
                     </div>
