added terms of services and privacy policy'

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -271,7 +271,10 @@
                     <p><a href="/">Home</a></p>
                     <p><a href="{% url 'about' %}">About</a></p>
                     <p><a href="{% url 'our_team' %}">Our Team</a></p>
-                    <p><a href="{% url 'articles' %}">Job Articles</a></p>
+                    <p><a href="{% url 'privacy_policy' %}">Privacy Policy</a></p>
+                    <p><a href="{% url 'terms_of_service' %}">Terms of Service</a></p>
+                    
+                    <!-- <p><a href="{% url 'articles' %}">Job Articles</a></p> -->
 
                     <p>
 
