updated the page of download certificate

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -211,6 +211,8 @@
     </style>
 
     <style>
+
+        
         #leveller-btn {
             width: 100%;
             cursor: pointer;
@@ -222,6 +224,8 @@
             background: #100720;
             transition: 0.1s;
         }
+        
+
 
         #leveller-btn::after {
             content: '';
@@ -411,9 +415,9 @@
                             <a class="sidebar-link {% block summer_active %} {% endblock %}"
                                 href="{% url 'student_flames' %}" aria-expanded="false">
                                 <span>
-                                    <i class="ti ti-flame"></i>
+                                    <i class="ti ti-flame text-white"></i>
                                 </span>
-                                <span class="hide-menu">FLAMES '25</span>
+                                <span class="hide-menu text-white">FLAMES '25</span>
                             </a>
                         </li>
 
