--- a/templates/student/flames/certificate_template.html
+++ b/templates/student/flames/certificate_template.html
@@ -117,6 +117,8 @@
         }
 
         .top-left-logo {
+            width: 170px;
+            height: auto;
             position: absolute;
             top: 30px;
             left: 30px;
@@ -124,12 +126,16 @@
         }
 
         .top-left-logo-img {
-            width: 60%;
-            height: 120px;
+            width: 100%;
+            height: auto;
             object-fit: contain;
+            display: block;
         }
 
         .top-right-logo {
+            width: 100px;
+            /* set a fixed width for consistency */
+            height: auto;
             position: absolute;
             top: 30px;
             right: 30px;
@@ -137,10 +143,11 @@
         }
 
         .top-right-logo-img {
-            width: 90%;
-            border-radius: 10% 10% 10% 10%;
-            height: 120px;
+            width: 100%;
+            height: auto;
             object-fit: contain;
+            display: block;
+            border-radius: 10% 10% 10% 10%;
         }
 
         .certificate-content {
@@ -156,11 +163,8 @@
         .main-heading {
             font-size: 3rem;
             font-weight: 800;
-            background: linear-gradient(45deg, #FFA447, #FF7F50);
-            background-size: 200% 200%;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #FFA447;
+            background: none !important;
             text-shadow: 0 0 5px rgba(255, 164, 71, 0.2);
             margin-bottom: 30px;
             letter-spacing: 2px;
@@ -372,7 +376,7 @@
             <span id="downloadText">Download</span>
         </button>
     </div>
-    
+
     <div class="certificate-container" id="certificate">
         <div class="mesh-left"></div>
         <div class="mesh-right"></div>
@@ -452,26 +456,13 @@
                     scale: 6, // Highest resolution
                     useCORS: false,
                     allowTaint: true,
-                    backgroundColor: '#ffffff',
+                    backgroundColor: '#000000', // <-- set to black
                     width: 1153, // Fixed A4 landscape width
                     height: 880, // Fixed A4 landscape height
                     scrollX: 0,
                     scrollY: 0,
                     logging: false,
                     foreignObjectRendering: false,
-
-                    onclone: function (clonedDoc) {
-                        // Ensure gradient text is preserved without background color
-                        const mainHeading = clonedDoc.querySelector('.main-heading');
-                        if (mainHeading) {
-                            mainHeading.style.background = 'linear-gradient(45deg, #FFA447, #FF7F50)';
-                            mainHeading.style.backgroundSize = '200% 200%';
-                            mainHeading.style.webkitBackgroundClip = 'text';
-                            mainHeading.style.webkitTextFillColor = 'transparent';
-                            mainHeading.style.backgroundClip = 'text';
-                            mainHeading.style.backgroundColor = 'transparent';
-                        }
-                    }
                 });
 
                 // Create download link
