added few more lines

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -83,7 +83,7 @@ Our Team | Angaar
         <!--============================= Core Members Section =======================-->
         <section class="hierarchical-container" data-aos="fade-up">
             <div class="role-heading">
-                <h3>Core Members</h3>
+                <h3>Core Team</h3>
             </div>
             <div class="members-grid">
                 <div class="base-card outreach-card" data-aos="fade-up" data-aos-delay="100">
@@ -92,7 +92,7 @@ Our Team | Angaar
                     </div>
                     <div class="card-content">
                         <h3 class="team-name member-name">Gaurika Dhingra</h3>
-                        <p class="team-position member-position">Operations Team</p>
+                        <p class="team-position member-position">Operations Head</p>
                         <div class="team-social">
                             <a href="https://www.linkedin.com/in/gaurika-dhingra/" class="social-icon"><i
                                     class="fab fa-linkedin-in"></i></a>
@@ -141,13 +141,34 @@ Our Team | Angaar
                 <h3>Outreach Associates</h3>
             </div>
             <div class="members-grid">
+
+                <div class="base-card outreach-card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="circular-img-wrapper">
+                        <img class="circular-img" src="{% static 'img/home/mradul.jpeg' %}" alt="Mradul khandelwal">
+                    </div>
+                    <div class="card-content">
+                        <h3 class="team-name member-name">Mradul Khandelwal</h3>
+                        <p class="team-position member-position">Team Lead - the <i>“bhaiya, ek idea hai”</i> person</p>
+                        <div class="team-social member-social">
+                            <a href="https://www.linkedin.com/in/mradul-khandelwal05" class="social-icon">
+                                <i class="fab fa-linkedin-in"></i></a>
+
+                            <a href="mailto:mk.angaari@gmail.com" class="social-icon"><i
+                                    class="fa-solid fa-envelope"></i></a>
+
+                                    <a href="tel:+919257974258" class="social-icon"><i
+                                class="fa-solid fa-phone"></i></a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="base-card outreach-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="circular-img-wrapper">
                         <img class="circular-img" src="{% static 'img/home/shubh.jpeg' %}" alt="Shubh Verma">
                     </div>
                     <div class="card-content">
                         <h3 class="team-name member-name">Shubh Verma</h3>
-                        <p class="team-position member-position">Outreach Associate</p>
+                        <p class="team-position member-position">- The <i>`ha kar lunga`</i> guy</p>
                         <div class="team-social member-social">
                             <a href="https://www.linkedin.com/in/shubh-verma-431ba827a" class="social-icon">
                                 <i class="fab fa-linkedin-in"></i></a>
@@ -164,7 +185,7 @@ Our Team | Angaar
                     </div>
                     <div class="card-content">
                         <h3 class="team-name member-name">Deepanshu Kashyap</h3>
-                        <p class="team-position member-position">Outreach Associate</p>
+                        <p class="team-position member-position">- the <i>“hum sab kuch kar lenge”</i> person</p>
                         <div class="team-social member-social">
                             <a href="https://www.linkedin.com/in/deepanshu-kashyap-433455f" target="_blank"
                                 class="social-icon"><i class="fab fa-linkedin-in"></i></a>
@@ -181,7 +202,7 @@ Our Team | Angaar
                     </div>
                     <div class="card-content">
                         <h3 class="team-name member-name">Dev Shukla</h3>
-                        <p class="team-position member-position">Outreach Associate</p>
+                        <p class="team-position member-position">- `Target` of every meet!</p>
                         <div class="team-social member-social">
                             <a href="https://www.linkedin.com/in/dev-shukla-704522326" target="_blank"
                                 class="social-icon"><i class="fab fa-linkedin-in"></i></a>
@@ -198,7 +219,7 @@ Our Team | Angaar
                     </div>
                     <div class="card-content">
                         <h3 class="team-name member-name">Anurodh Mishra</h3>
-                        <p class="team-position member-position">Outreach Associate</p>
+                        <p class="team-position member-position">- The <i>“sab kuch manage ho jayega”</i> guy</p>
                         <div class="team-social member-social">
                             <a href="https://www.linkedin.com/in/anurodh-mishra-105707323" target="_blank"
                                 class="social-icon"><i class="fab fa-linkedin-in"></i></a>
@@ -215,7 +236,7 @@ Our Team | Angaar
                     </div>
                     <div class="card-content">
                         <h3 class="team-name member-name">Akhil Pratap Singh</h3>
-                        <p class="team-position member-position">Outreach Associate</p>
+                        <p class="team-position member-position">- The <i>“bhaiya is always right” person</i></p>
                         <div class="team-social member-social">
                             <a href="https://www.linkedin.com/in/akhil-pratap-singh-1a63b6326" target="_blank"
                                 class="social-icon"><i class="fab fa-linkedin-in"></i></a>
