changes the footer and about

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -247,7 +247,7 @@
                                 class="img-fluid" alt="logo"></a>
                     </div>
                     <div class="footer-text">
-                        <p>Agr Angaar Hai Tere Houslo Me, To Bas Dekhke Mat Ja... Seekh... Or Lga de... ANGAAR🔥
+                        <p>Agar Angaar hai tere houslo me, to bas dekhke mat ja... Seekh... or laga de... ANGAAR🔥
                         </p>
                     </div>
                 </div>
