--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block title %}
-Our Team | Angaar
+The Angaari Aawam 🔥
 {% endblock %}
+
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/home/css/index.css' %}">
@@ -81,6 +82,7 @@ Our Team | Angaar
         </div>
 
         <!--============================= Core Members Section =======================-->
+
         <section class="hierarchical-container" data-aos="fade-up">
             <div class="role-heading">
                 <h3>Core Team</h3>
@@ -136,6 +138,7 @@ Our Team | Angaar
         </section>
 
         <!--=============================== Outreach Associates Section ===============================-->
+
         <section class="hierarchical-container" data-aos="fade-up">
             <div class="role-heading">
                 <h3>Outreach Associates</h3>
@@ -242,7 +245,6 @@ Our Team | Angaar
                                 class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                             <a href="mailto:akhilpratap2365@gmail.com" class="social-icon"><i
                                     class="fa-solid fa-envelope"></i></a>
-
                         </div>
                     </div>
                 </div>
