fixed some bugs

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -125,7 +125,7 @@ The Angaari Aawam 🔥
                         <h3 class="team-name member-name">Mukund Johari</h3>
                         <p class="team-position member-position">Operations Co-ordinator</p>
                         <div class="team-social member-social">
-                            <a href="www.linkedin.com/in/mukund-johari" target="_blank" class="social-icon"><i
+                            <a href="https://www.linkedin.com/in/mukund-johari" target="_blank" class="social-icon"><i
                                     class="fab fa-linkedin-in"></i></a>
 
                             <a href="mailto:mukundjohari@gmail.com" class="social-icon"><i class="fa-solid fa-envelope"></i></a>
@@ -153,7 +153,7 @@ The Angaari Aawam 🔥
                         <h3 class="team-name member-name">Mradul Khandelwal</h3>
                         <p class="team-position member-position">Team Lead - the <i>“bhaiya, ek idea hai”</i> person</p>
                         <div class="team-social member-social">
-                            <a href="https://www.linkedin.com/in/mradul-khandelwal05" class="social-icon">
+                            <a href="https://www.linkedin.com/in/mradul-khandelwal05" target="_blank" class="social-icon">
                                 <i class="fab fa-linkedin-in"></i></a>
 
                             <a href="mailto:mk.angaari@gmail.com" class="social-icon"><i
