some minor changes on about page:

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -740,7 +740,7 @@
     
     <div class="container mt-4">
         <div class="about-header" data-aos="fade-up" data-aos-duration="1000">
-            <h1 class="about-title">We Are Angaar 🔥</h1>
+            <h1 class="about-title">We Are Angaar <i class="fas fa-fire"></i></h1>
             <p class="about-subtitle">Transforming passionate learners into industry-ready professionals through
                 hands-on experience and mentorship.</p>
         </div>
